--- a/src/Playlist/Playlist.css
+++ b/src/Playlist/Playlist.css
@@ -99,3 +99,143 @@
     padding: 5px 10px;
     resize: none;
 }
+
+.top {
+    display: none;
+}
+
+@media (max-width: 1200px) {
+    
+    .big-img {
+        max-width: 160px;
+        height: 160px;
+        border-radius: 5px;
+    }
+
+    .info h1 {
+        font-size: 35px;
+    }
+    
+    .info p {
+        font-size: 15px;
+    }
+    
+    .playlist-btn {
+        gap: 20px;
+    }
+    
+    .add-to {
+        font-size: 14px;
+        padding: 5px 10px;
+    }
+
+    .put {
+        font-size: 14px;
+        padding: 5px 11px;
+    }
+
+    .playlist-song {
+        max-height: calc(100vh - 2 * 215px);
+    }
+
+    .album-name {
+        display: none;
+    }
+
+    .playlist-title {
+        font-size: 32px;
+        font-weight: 800;
+        max-width: 200px;
+    }
+    
+    .playlist-description {
+        font-size: 13px;
+        max-width: 250px;
+        max-height: 20px;
+    }
+}
+
+@media (max-width: 900px){
+
+    .playlist-info {
+        display: flex;
+        gap: 20px;
+        margin-bottom: 60px;
+        margin-top: 5px;
+    }
+
+    .playlist-song {
+        max-height: calc(100vh - 2 * 265px);
+    }
+
+    .top {
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 50px;
+        margin-top: 10px;
+    }
+
+    .big-img {
+        max-width: 120px;
+        height: 120px;
+        border-radius: 5px;
+    }
+
+    .info h1 {
+        font-size: 30px;
+    }
+    
+    .info p {
+        font-size: 14px;
+    }
+    
+    .playlist-btn {
+        gap: 20px;
+    }
+    
+    .add-to {
+        font-size: 13px;
+        padding: 3px 10px;
+    }
+
+    .put {
+        font-size: 13px;
+        padding: 3px 11px;
+    }
+
+}
+
+@media (max-width: 450px) {
+
+    .playlist-info {
+        gap: 10px;
+    }
+
+    .big-img {
+        max-width: 100px;
+        height: 100px;
+        border-radius: 5px;
+    }
+
+    .info h1 {
+        font-size: 25px;
+    }
+    
+    .info p {
+        font-size: 11px;
+    }
+    
+    .playlist-btn {
+        gap: 10px;
+    }
+    
+    .add-to {
+        font-size: 10px;
+        padding: 1px 8px;
+    }
+
+    .put {
+        font-size: 10px;
+        padding: 1px 8px;
+    }
+}
