--- a/src/App/App.css
+++ b/src/App/App.css
@@ -68,7 +68,8 @@
 .box-6,
 .box-6-active,
 .box-7,
-.box-7-active {
+.box-7-active,
+.box-8 {
     display: none;
 }
 
@@ -201,6 +202,19 @@
         flex-direction: column;
         background-color: #1E1E1E;
         height: calc(100vh - 2 * 170px);
+        margin: 10px 20px 20px;
+        border-radius: 10px;
+        padding: 20px 25px;
+    }
+
+    .box-8 {
+        grid-area: seven;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: #1E1E1E;
+        height: 50px;
         margin: 10px 20px 20px;
         border-radius: 10px;
         padding: 20px 25px;
