--- a/src/Search/Search.css
+++ b/src/Search/Search.css
@@ -81,6 +81,14 @@
     cursor: pointer;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 44vh;
+}
+
 @media (max-width: 900px) {
 
     .search-box {
